@@ -552,3 +552,6 @@ IsStrongPseudoprime(341,3)					0
 IsPseudoprime(341,2)						1
 -[1,2] mod 3							[2,1]
 DiscreteLog(153,2,181)						107
+DiscreteLog(13,6,229)						117
+log(153,2) mod 181						107
+log(13,6) mod 229						117
