@@ -107,7 +107,7 @@ struct _GelEFunc {
 	guint32 on_subst_list:1;
 	guint32 vararg:1;
 	guint32 propagate_mod:1;
-	guint32 no_mod_all_args:1; /* FIXME: implement */
+	guint32 no_mod_all_args:1;
 };
 
 typedef enum {
